--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'com.h2database:h2'
+    testImplementation 'org.assertj:assertj-core:3.25.3'
 }
 
 tasks.named('test') {
